test/good/arrays/for03.px

x = 0
for x in [-2, 3, 5] by -1 do
    skip
for n in [5, 6, 7] * 3 by x do
    print n
