test/bad/loops/for16.px

for x in [1] do
    skip
print x
